2016-09-02  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/catalogues.py:

	(SpeciesAuxData.from_xml): Raise exception if version is unknown.

	(Sparse.from_csc_matrix): Small doc fix.

2016-09-02  Oliver Lemke  <olemke@core-dump.info>

	* typhon/math/array.py: Autopep8.

	* typhon/math/stats.py:

	Remove unused import matplotlib.mlab. Autopep8.

	* typhon/oem/__init__.py: Remove unused import numpy.

	* typhon/physics/__init__.py: Autopep8.

	* typhon/plots/__init__.py:

	Remove unused import matplotlib.style. Autopep8.

	* typhon/utils/__init__.py, typhon/utils/cache.py: Autopep8.

	* typhon/utils/latex.py:

	Remove unused import numpy.

	Use 'if isinstance() ...' instead of 'if type() is ...'.

	* typhon/utils/metaclass.py:

	Remove unused import numpy. Autopep8.

2016-09-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/__init__.py: Fixed porting leftovers.

	Raise exceptions instead of calling error(). Bug reported by Oliver.

2016-09-02  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/__init__.py:

	Use 'if isinstance() ...' instead of 'if type() is ...'.

	Remove unused import sys. Autopep8.

	* typhon/arts/xml/read.py: Use explicit import instead of *.

	* typhon/arts/xml/write.py:

	Use explicit import instead of *.

	Use 'if isinstance() ...' instead of 'if type() is ...'.

2016-09-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/atmosphere.py: Fixed function name.

	The abbreviation for integrated water vapor is IWV.

2016-09-01  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/catalogues.py, typhon/arts/catalogues.py:

	Autopep8.

	Remove unnecessary imports (griddedfield.* and numbers).

	Use 'if isinstance() ...' instead of 'if type() is ...' because
	isinstance also takes into account inheritance.

	* typhon/arts/retrieval.py: Remove unnecessary import numpy.

	* typhon/arts/scattering.py, typhon/arts/utils.py:

	Use 'if isinstance() ...' instead of 'if type() is ...'.

	* typhon/arts/types.py:
